# beep-beep-beep

./: README.md  STARTUP.md  env.example  package-lock.json  package.json  start.bat
app/api/ebay/callback/: route.ts
app/api/ebay/check-duplicate/: route.ts
app/api/ebay/increase-inventory/: route.ts
app/api/ebay/list/: route.ts
app/api/ebay/policies/: route.ts
backend/: .env.example  .gitignore  README.md  TODO.md  pyproject.toml  smoke_test.py
backend/app/: auth.py  config.py  constants.py  db.py  main.py
backend/app/routers/: catalog.py  ebay.py  settings.py
backend/app/services/: all_item_catalog.py  catalog.py  ebay_client.py  inventory.py  inventory_db.py  listing.py  media.py  search.py  upc.py
backend/supabase/: schema.sql
backend/supabase/migrations/: add_all_item_catalog_indexes.sql  add_ebay_inventory_location.sql  add_inventory_enrich_columns.sql  add_inventory_sync_state.sql  add_media_type_dimension_defaults.sql  add_sales_sync_state.sql
frontend/: .env.example  COMMIT_MSG.tmp  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/: Navigation.tsx  PortPending.tsx  ProductSearchCard.tsx  ProtectedRoute.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/lib/: api.ts  constants.ts  keyword-masker.ts  media.ts  supabase.ts
frontend/src/pages/: Dashboard.tsx  EbayConnect.tsx  Home.tsx  Login.tsx  ProductSearch.tsx  Settings.tsx  Signup.tsx
lib/: ebay.ts
prisma/migrations/20240101000000_init/: migration.sql
(+9 files in other folders)
