[project]
name = "beep-beep-backend"
version = "0.1.0"
description = "FastAPI backend for the Beep Beep eBay listing app"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "supabase>=2.9.0",
    "pyjwt[crypto]>=2.9.0",
    "pydantic-settings>=2.6.0",
    "sentry-sdk[fastapi]>=2.18.0",
    "boto3>=1.35.0",
]

[dependency-groups]
dev = [
    "ruff>=0.7.0",
    "pytest>=8.3.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
